--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   padding: 0 2rem;
+  box-shadow: 0px 3px 12px -4px rgba(0, 0, 0, 0.75);
   .logo {
     font-size: 1.5rem;
   }
